--- a/style/_cell.scss
+++ b/style/_cell.scss
@@ -1,5 +1,5 @@
 .cell {
-  border: 1px solid #6F6F6F;
+  border: 1px solid #6f6f6f;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,8 +7,8 @@
   background-color: rgb(181, 179, 179);
 }
 .hidden {
-  border: 4px solid #9E9E9E;
-  background-color: #6F6F6F;
+  border: 4px solid #9e9e9e;
+  background-color: #6f6f6f;
   border-style: outset;
   cursor: pointer;
 }
