--- a/style/_header.scss
+++ b/style/_header.scss
@@ -3,6 +3,6 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  color: #BB8F38;
+  color: #bb8f38;
   margin: 20px 0 10px;
 }
