--- a/style/_timer.scss
+++ b/style/_timer.scss
@@ -1,7 +1,7 @@
 .timer {
   display: flex;
   column-gap: 5px;
-  border: 1px solid #EDEDED;
+  border: 1px solid #ededed;
   border-radius: 5px;
   padding: 3px;
 }
