--- a/style/_mode.scss
+++ b/style/_mode.scss
@@ -14,11 +14,11 @@
     margin: 10px 0;
     input {
       width: 27px;
-      border: 2px solid #EDEDED;
+      border: 2px solid #ededed;
       border-radius: 5px;
       margin-left: 10px;
       background-color: inherit;
-      color: #EDEDED;
+      color: #ededed;
       font-size: 1rem;
       padding: 2px;
       &:focus {
