--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 body {
   font-size: 10px;
   background-color: #000000;
-  color: #EDEDED;
+  color: #ededed;
 }
 
 .container {
@@ -20,24 +20,24 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  color: #BB8F38;
+  color: #bb8f38;
   margin: 20px 0 10px;
 }
 
 .button {
   padding: 5px 10px;
   border-radius: 5px;
-  border: 1px solid #EDEDED;
+  border: 1px solid #ededed;
   background-color: inherit;
   transition: 0.2s;
-  color: #EDEDED;
+  color: #ededed;
 }
 .button:hover {
   cursor: pointer;
   transform: scale(1.1);
-  color: #BB8F38;
-  border: 1px solid #BB8F38;
-  box-shadow: 0 0 10px 1px #BB8F38;
+  color: #bb8f38;
+  border: 1px solid #bb8f38;
+  box-shadow: 0 0 10px 1px #bb8f38;
 }
 .button:active {
   transform: scale(1);
@@ -56,12 +56,12 @@ body {
 .main__buttons {
   display: flex;
   -moz-column-gap: 10px;
-       column-gap: 10px;
+  column-gap: 10px;
   justify-content: space-between;
 }
 
 .cell {
-  border: 1px solid #6F6F6F;
+  border: 1px solid #6f6f6f;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,8 +70,8 @@ body {
 }
 
 .hidden {
-  border: 4px solid #9E9E9E;
-  background-color: #6F6F6F;
+  border: 4px solid #9e9e9e;
+  background-color: #6f6f6f;
   border-style: outset;
   cursor: pointer;
 }
@@ -112,8 +112,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 .game__easy {
   width: 450px;
@@ -188,11 +188,11 @@ body {
 }
 .mode__desc input {
   width: 27px;
-  border: 2px solid #EDEDED;
+  border: 2px solid #ededed;
   border-radius: 5px;
   margin-left: 10px;
   background-color: inherit;
-  color: #EDEDED;
+  color: #ededed;
   font-size: 1rem;
   padding: 2px;
 }
@@ -203,15 +203,15 @@ body {
   display: flex;
   align-items: center;
   -moz-column-gap: 10px;
-       column-gap: 10px;
+  column-gap: 10px;
   margin-top: 10px;
 }
 
 .timer {
   display: flex;
   -moz-column-gap: 5px;
-       column-gap: 5px;
-  border: 1px solid #EDEDED;
+  column-gap: 5px;
+  border: 1px solid #ededed;
   border-radius: 5px;
   padding: 3px;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
